	PR gold/14309 	* configure.ac: Test whether std::tr1::hash<off_t> works. 	* gold.h: Add a specialization for std::tr1::hash<off_t> if 	needed. 	* output.h (class Output_fill): Add virtual destructor. 	* configure, config.in: Rebuild.